Added an interface for an environment controller, together with a default implementation that uses user-supplied params.  Currently, the only parameters are
  /environment/params/base-wind-speed-kt
  /environment/params/gust-wind-speed-kt

but others will show up soon (i.e. sheer, variable direction, variable
visibility, etc.).  To activate these properties, you have to
configure --with-new-environment.

The gusting function is simplistic and needs to be replaced with
something better, though it doesn't feel too far off.

--- a/src/Environment/Makefile.am
+++ b/src/Environment/Makefile.am
@@ -5,7 +5,8 @@
 noinst_LIBRARIES = libEnvironment.a
 
 libEnvironment_a_SOURCES = environment.cxx environment.hxx \
-	environment_mgr.cxx environment_mgr.hxx
+	                   environment_mgr.cxx environment_mgr.hxx \
+                           environment_ctrl.cxx environment_ctrl.hxx
 
 if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
