Removed configuration option --with-old-mouse and FG_OLD_MOUSE macro.
Removed configuration option --with-new-environment and
FG_NEW_ENVIRONMENT macro.

Added configuration option --with-weathercm and FG_WEATHERCM macro.

FGEnvironment is now the default; use --with-weathercm to get the old
weather.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -4,10 +4,10 @@ else
 SERIAL_LIBS =
 endif
 
-if ENABLE_NEW_ENVIRONMENT
-WEATHER_LIBS = $(top_builddir)/src/Environment/libEnvironment.a
-else
+if ENABLE_WEATHERCM
 WEATHER_LIBS = $(top_builddir)/src/WeatherCM/libWeatherCM.a
+else
+WEATHER_LIBS = $(top_builddir)/src/Environment/libEnvironment.a
 endif
 
 if ENABLE_NETWORK_OLK
