Added a scripts subdirectory with support for running external python scripts that communicate with FlightGear via it's "telnet" interface.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 SUBDIRS = \
 	tests \
-	man \
-	src
+	src \
+        scripts \
+	man
 
 EXTRA_DIST = Thanks acsite.m4 acconfig.h irix-hack.sh \
 	FlightGear.dsp FlightGear.dsw
