Separated some functionality out into reusable classes, and built a simplistic, text-field oriented interface for major property groups.
The JAR is now executable, so the program can be launched with

  java -jar fgfsclient.jar <host> <port>

--- a/scripts/java/FGClient/build.xml
+++ b/scripts/java/FGClient/build.xml
@@ -19,7 +19,7 @@
 </target>
 
 <target name="jar" depends="compile">
- <jar jarfile="fgfsclient.jar" basedir="classes" excludes="**/Makefile"/>
+ <jar manifest="main-class.txt" jarfile="fgfsclient.jar" basedir="classes" excludes="**/Makefile"/>
 </target>
 
 <target name="javadoc" depends="prepare">
