--- a/src/Cockpit/Makefile.am
+++ b/src/Cockpit/Makefile.am
@@ -7,6 +7,7 @@ libCockpit_a_SOURCES = \
 	hud_labl.cxx hud_ladr.cxx \
 	hud_lat.cxx hud_lon.cxx \
 	hud_scal.cxx hud_tbi.cxx \
+	kr_87.cxx kr_87.hxx \
 	panel.cxx panel.hxx \
         panel_io.cxx panel_io.hxx \
 	radiostack.cxx radiostack.hxx \
