--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -24,8 +24,7 @@ libNetwork_a_SOURCES = \
 	pve.cxx pve.hxx \
 	raw_ctrls.hxx \
 	ray.cxx ray.hxx \
-	rul.cxx rul.hxx \
-	telnet.cxx telnet.hxx
+	rul.cxx rul.hxx
 
 if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
