Tidy up the autoconf/automake configuration a bit.
- Removed some old cruft.

- Removed some support for older versions of automake which technically was
  correct, but caused the newer automakes to squawk warnings during an
  initial sanity check (which isn't done very intelligently.)

  NOTE: this fix is technically not correct for older version of automake.
  These older version use the variable "INCLUDES" internally and could have
  them already set to an important value.  That is why we were appending
  our values to them.  However, newer versions of automake don't set this
  value themselves so it is an error to append to a non-existant variable.
  We seem to "get away" with overwriting the value on older versions of
  automake, but if you have problems, consider upgrading to at least
  automake-1.5.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -1,9 +1,3 @@
-if ENABLE_UNIX_SERIAL
-SERIAL_LIBS = -lsgserial
-else
-SERIAL_LIBS =
-endif
-
 if ENABLE_WEATHERCM
 WEATHER_LIBS = $(top_builddir)/src/WeatherCM/libWeatherCM.a
 else
@@ -81,7 +75,7 @@ fgfs_LDADD = \
 	$(top_builddir)/src/Input/libInput.a \
 	-lsgroute -lsgsky -lsgephem -lsgtiming -lsgio -lsgscreen \
 	-lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
-	$(SERIAL_LIBS) \
+	-lsgserial \
 	$(THREAD_LIBS) \
 	-lplibpu -lplibfnt -lplibnet -lplibssg -lplibsg \
 	-lmk4 -lz \
@@ -90,10 +84,4 @@ fgfs_LDADD = \
 
 fgfs_CFLAGS = -DTHIS_IS_A_TEST
 
-if OLD_AUTOMAKE
-INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
-else
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
-endif
-
-
