--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,4 +21,4 @@ test_text_SOURCES = test-text.cxx
 test_text_LDADD = $(base_LIBS)
 
 test_up_SOURCES = test-up.cxx
-test_up_LDADD = -lsgmath -lsgdebug -lplibsg $(base_LIBS)
+test_up_LDADD = -lsgmath -lsgdebug -lplibsg -lplibul $(base_LIBS)
