--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -69,7 +69,7 @@ fgfs_LDADD = \
 	$(top_builddir)/src/Time/libTime.a \
 	$(WEATHER_LIBS) \
 	$(top_builddir)/src/Input/libInput.a \
-	-lsgroute -lsgsky -lsgephem -lsgtiming -lsgio -lsgscreen \
+	-lsgroute -lsgsky -lsgclouds3d -lsgephem -lsgtiming -lsgio -lsgscreen \
 	-lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
 	-lsgserial \
 	$(THREAD_LIBS) \
