Latest updates, including a thrust-only turbofan model.  It should produce realistic thrust (including time-dependent effects), but does not provide N1, N2, EPR, etc.

--- a/src/FDM/JSBSim/Makefile.am
+++ b/src/FDM/JSBSim/Makefile.am
@@ -49,7 +49,7 @@ libJSBSim_a_SOURCES = \
 	FGTank.cpp FGTank.h \
 	FGfdmSocket.cpp FGfdmSocket.h \
   FGTurbine.cpp FGTurbine.h \
-        FGPropertyManager.h \
+  FGPropertyManager.cpp FGPropertyManager.h  \
 	JSBSim.cxx JSBSim.hxx
 
 
