Started new module and sub-modules for aircraft systems, including an initial simplistic vacuum system that's not yet connected to anything.

--- a/configure.ac
+++ b/configure.ac
@@ -591,6 +591,8 @@ AC_CONFIG_FILES([ \
 	src/Objects/Makefile \
 	src/Scenery/Makefile \
 	src/Sound/Makefile \
+	src/Systems/Makefile \
+	src/Systems/Vacuum/Makefile \
 	src/Time/Makefile \
 	src/WeatherCM/Makefile \
 	tests/Makefile \
