Flattened src/Systems/ subtree.
Added src/Instrumentation/ with partial stab at a vacuum-driven
attitude indicator.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,7 @@ SUBDIRS = \
         FDM \
         GUI \
         Input \
+	Instrumentation \
         Model \
         Navaids \
         $(NETWORK_DIRS) \
