--- a/src/Systems/Makefile.am
+++ b/src/Systems/Makefile.am
@@ -1,7 +1,6 @@
-SUBDIRS	= Vacuum
-
 noinst_LIBRARIES = libSystems.a
 
-libSystems_a_SOURCES = system_mgr.cxx system_mgr.hxx
+libSystems_a_SOURCES = system_mgr.cxx system_mgr.hxx \
+                       vacuum.cxx vacuum.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
