Added static port system and a new altimeter model connected to it. The static port uses the
  /systems/static/

property subtree, and the altimeter uses the

  /instrumentation/altimeter/

property subtree.

--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libInstrumentation.a
 
 libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
+                               altimeter.cxx altimeter.hxx \
                                attitude_indicator.cxx attitude_indicator.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
