--- a/src/Systems/Makefile.am
+++ b/src/Systems/Makefile.am
@@ -1,8 +1,9 @@
 noinst_LIBRARIES = libSystems.a
 
 libSystems_a_SOURCES = \
-			system_mgr.cxx system_mgr.hxx \
-			electrical.cxx electrical.hxx \
-			vacuum.cxx vacuum.hxx
+                        system_mgr.cxx system_mgr.hxx \
+                        electrical.cxx electrical.hxx \
+                        static.cxx static.hxx \
+                        vacuum.cxx vacuum.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
