--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -2,6 +2,8 @@ noinst_LIBRARIES = libInstrumentation.a
 
 libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
                                altimeter.cxx altimeter.hxx \
-                               attitude_indicator.cxx attitude_indicator.hxx
+                               attitude_indicator.cxx attitude_indicator.hxx \
+                               heading_indicator.cxx heading_indicator.hxx \
+                               vertical_speed_indicator.cxx vertical_speed_indicator.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
