--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libInstrumentation.a
 
 libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
+                               airspeed_indicator.cxx airspeed_indicator.hxx \
                                altimeter.cxx altimeter.hxx \
                                attitude_indicator.cxx attitude_indicator.hxx \
                                heading_indicator.cxx heading_indicator.hxx \
