--- a/src/Systems/Makefile.am
+++ b/src/Systems/Makefile.am
@@ -3,6 +3,7 @@ noinst_LIBRARIES = libSystems.a
 libSystems_a_SOURCES = \
                         system_mgr.cxx system_mgr.hxx \
                         electrical.cxx electrical.hxx \
+                        pitot.cxx pitot.hxx \
                         static.cxx static.hxx \
                         vacuum.cxx vacuum.hxx
 
