Shuffled location of ExternalNet.[ch]xx to it's own subdir. Removed External.[ch]xx which is a duplicate of NullFDM.[ch]xx --fdm=external is preserved but just maps to NullFDM.

--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -1,12 +1,10 @@
-SUBDIRS	= Balloon JSBSim LaRCsim UIUCModel YASim
+SUBDIRS	= Balloon ExternalNet JSBSim LaRCsim UIUCModel YASim
 
 noinst_LIBRARIES = libFlight.a
 
 libFlight_a_SOURCES = \
 	ADA.cxx ADA.hxx \
 	Balloon.cxx Balloon.h \
-	External.cxx External.hxx \
-	ExternalNet.cxx ExternalNet.hxx \
 	flight.cxx flight.hxx \
 	IO360.cxx IO360.hxx \
 	LaRCsim.cxx LaRCsim.hxx \
