Preliminary support for AI planes from Dave Luff.  This works only at KEMT (w120n30 scenery), and you will have to set the property /sim/ai-traffic/enabled to 'true' to see the other plane (and tune comm1 to 121.2 to hear the other plane's radio calls).

--- a/src/ATC/Makefile.am
+++ b/src/ATC/Makefile.am
@@ -8,8 +8,10 @@ libATC_a_SOURCES = \
 	ATCdisplay.hxx ATCdisplay.cxx \
 	ATCmgr.hxx ATCmgr.cxx \
 	ATCutils.hxx ATCutils.cxx \
+	ATCProjection.hxx ATCProjection.cxx \
 	AIMgr.hxx AIMgr.cxx \
 	AIEntity.hxx AIEntity.cxx \
+	AIPlane.hxx AIPlane.cxx \
 	AILocalTraffic.hxx AILocalTraffic.cxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
