--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -2,10 +2,10 @@ noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
 	apt_signs.cxx apt_signs.hxx \
-	dir_lights.cxx dir_lights.hxx \
 	newmat.cxx newmat.hxx \
 	matlib.cxx matlib.hxx \
 	obj.cxx obj.hxx \
+	pt_lights.cxx pt_lights.hxx \
 	texload.c texload.h colours.h
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
