--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -8,6 +8,7 @@ endif
 
 libGUI_a_SOURCES = \
 	apt_dlg.cxx apt_dlg.hxx \
+        new_gui.cxx new_gui.hxx \
 	gui.cxx gui.h gui_funcs.cxx \
 	gui_local.cxx gui_local.hxx \
 	mouse.cxx \
