--- a/configure.ac
+++ b/configure.ac
@@ -297,6 +297,7 @@ else
 
     echo Win32 specific hacks...
     AC_DEFINE([WIN32], 1, [Define if building on a Win32 platform])
+    AC_DEFINE([NOMINMAX], 1, [Define for Win32 platforms])
 
     # just define these to true and hope for the best
     ac_cv_lib_glut_glutGetModifiers="yes"
