--- a/src/ATC/Makefile.am
+++ b/src/ATC/Makefile.am
@@ -5,7 +5,9 @@ libATC_a_SOURCES = \
 	atis.hxx atis.cxx atislist.hxx atislist.cxx \
 	tower.hxx tower.cxx towerlist.hxx towerlist.cxx \
 	approach.hxx approach.cxx approachlist.hxx approachlist.cxx \
+	ground.hxx ground.cxx groundlist.hxx groundlist.cxx \
 	ATCdisplay.hxx ATCdisplay.cxx \
+	ATCVoice.hxx ATCVoice.cxx \
 	ATCmgr.hxx ATCmgr.cxx \
 	ATCutils.hxx ATCutils.cxx \
 	ATCProjection.hxx ATCProjection.cxx \
