--- a/src/Input/Makefile.am
+++ b/src/Input/Makefile.am
@@ -6,10 +6,10 @@ bin_PROGRAMS = js_demo fgjs
 
 js_demo_SOURCES = js_demo.cxx
 
-js_demo_LDADD = $(audio_LIBS) -lplibjs -lplibul
+js_demo_LDADD = -lplibjs -lplibul $(audio_LIBS)
 
 fgjs_SOURCES = fgjs.cxx jsinput.cxx jsinput.h jssuper.cxx jssuper.h
 
-fgjs_LDADD = $(audio_LIBS) -lplibjs -lplibul
+fgjs_LDADD = -lplibjs -lplibul $(audio_LIBS)
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
